# particle-filter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
demos/: interactive_fast_plate_orbit_filter_demo.py  interactive_plate_orbit_filter_demo.py  interactive_point_filter_demo.py
include/config/: target_config.h
include/fast_plate_orbit/: init.h  observation.h  observed_plate.h  observed_plate_orbit.h  observed_plate_orbit_builder.h  particle_filter.h  particle_filter_configuration.h  particle_filter_configuration_parameters.h  predicted_plate.h  prediction.h
include/filter/: particle_filter.h  particle_reduction_state.h  systematic_resampler.h
include/filter/concepts/: observation.h  particle_filter_configuration.h  particle_reduction_operation.h  prediction.h  sampler.h
include/pf/filter/: systematic_resampler.h
include/pf/filter/concepts/: prediction.h
include/pf/util/: device_array.h
include/plate_orbit/: init.h  observation.h  observed_plate.h  observed_plate_orbit.h  observed_plate_orbit_builder.h  particle_filter.h  particle_filter_configuration.h  particle_filter_configuration_parameters.h  predicted_plate.h  prediction.h
include/point/: init.h  observation.h  particle_filter.h  particle_filter_configuration.h  prediction.h
include/util/: device_array.h  random_variable_sampler.h
pf/config/: target_config.h
pf/filter/: particle_filter.h  particle_reduction_state.h  systematic_resampler.h
pf/filter/concepts/: observation.h  particle_filter_configuration.h  particle_reduction_operation.h  sampler.h
pf/util/: device_array.h
src/fast_plate_orbit/: init.cc  particle_filter.cu
src/particle_filter/: __init__.py  __init__.pyi  fast_plate_orbit.pyi  particle_filter.cc  plate_orbit.pyi  point.pyi
src/plate_orbit/: init.cc  particle_filter.cu
src/point/: init.cc  particle_filter.cc
test/include/filter/: particle_filter_tests.h  particle_reduction_state_tests.h  systematic_resampler_tests.h
test/include/point/: observation.h  particle_filter_configuration.h  particle_filter_configuration_parameters.h  prediction.h  sampler.h
test/src/: main.cc  main.cu
